--- a/client-angular-1.x/dev-server/index.html
+++ b/client-angular-1.x/dev-server/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-     <main ui-view></main>
+     <div id='root' ui-view></div>
 
      <script src='build/app.bundle.js'></script>
   </body>
