react files fixed

--- a/client-react/server/index.html
+++ b/client-react/server/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wagon app</title>
+    <title>webpack boilerplate</title>
     <meta charset='utf-8' />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <base href='/'>
